# linc

./: .gitignore  README.md  pyproject.toml
examples/: echo_agent.py  llm_agent.py  multi_platform.py
src/linc/: __init__.py  cli.py  client.py  gateway.py  launch.py
src/linc/adapters/: __init__.py  dingtalk.py  feishu.py  slack.py  wecom.py
src/linc/core/: __init__.py  adapter.py  config.py  errors.py  http.py  hub.py  locks.py  models.py  schema.py  store.py
tests/: conftest.py  test_adapter_registry.py  test_cli.py  test_client.py  test_dingtalk.py  test_e2e.py  test_gateway.py  test_slack.py  test_store.py
tests/_fakes/: fake_adapter.py
