[project]
name = "linc"
version = "0.1.0dev0"
description = "An IM Gateway daemon that lets LLM Agents talk to multiple IM platforms via a SQLite file."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "aiosqlite>=0.20.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "typer>=0.12",
    "pyfiglet>=1.0",
    "rich>=13.0",
    "aiorun>=2024.8.1",
    # LLM agent example: Chak provides a unified Conversation API for DeepSeek and others.
    "chakpy>=0.3.7",
    # Slack: official SDK; AsyncWebClient + SocketModeClient (aiohttp-based) are bundled.
    "slack-sdk>=3.27",
    "slackify-markdown>=0.2",
    "aiohttp>=3.9",
    # Feishu (Lark): official SDK — WebSocket events + REST API.
    "lark-oapi>=1.4.0",
    # DingTalk: official Stream SDK — WebSocket connection + ChatbotHandler.
    "dingtalk-stream>=0.24",
    # WeCom AI Bot: official SDK — WebSocket long connection mode.
    "wecom-aibot-python-sdk>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
linc = "linc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
chakpy = { path = "/Users/zhixiang.xue/zeitro/chak-ai", editable = true }

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
